add goal reminder section

--- a/strategies.html
+++ b/strategies.html
@@ -362,29 +362,95 @@ When ‘Downtime’ is scheduled, only phone calls and apps that you choose to a
 </div>
 <div id="self-tracking" class="section level1">
 <h1><span class="header-section-number">2</span> Self-tracking</h1>
-<div id="measure-yourself-and-see-how-your-spend-your-time---rescuetime-built-in-tools" class="section level2">
-<h2><span class="header-section-number">2.1</span> Measure yourself and see how your spend your time - RescueTime, built-in tools</h2>
+<div id="see-how-your-spend-your-time" class="section level2">
+<h2><span class="header-section-number">2.1</span> See how your spend your time</h2>
+<p>Various tools are available to see how your spend time on your devices, and compare it to your goals.</p>
+<p>On <strong>laptop</strong>, one of the most popular tools is <a href="https://www.rescuetime.com">RescueTime</a>:</p>
+<p><img src="figures/rescue_time.png" width="1039" /></p>
+<div id="android" class="section level3">
+<h3><span class="header-section-number">2.1.1</span> Android</h3>
+<p>On <strong>Android</strong>, apps such as <a href="https://play.google.com/store/apps/details?id=com.agooday.screentime&amp;hl=en&amp;gl=us">Usage Time</a> provide the same functionality:</p>
+<p><img src="figures/app_usage.png" width="525" /></p>
+<p>Google has also begun to provide the same functionality via their <a href="https://play.google.com/store/apps/details?id=com.google.android.apps.wellbeing&amp;hl=en_GB">Digital Wellbeing</a> app which comes pre-installed on many newer devices:
+<img src="figures/digi_wellbeing.jpeg" width="910" /></p>
 </div>
-<div id="pomodoro-timers-countdowns" class="section level2">
-<h2><span class="header-section-number">2.2</span> Pomodoro timers, countdowns</h2>
+<div id="ios" class="section level3">
+<h3><span class="header-section-number">2.1.2</span> iOS</h3>
+<p>On iOS, Apple’s recent app <a href="https://support.apple.com/en-gb/HT208982">Screen Time</a> provides this ability:
+<img src="figures/screentime.png" width="347" /></p>
 </div>
 </div>
-<div id="goal-advancement" class="section level1">
-<h1><span class="header-section-number">3</span> Goal-advancement</h1>
-<div id="remind-yourself-of-what-you-needed-to-do" class="section level2">
-<h2><span class="header-section-number">3.1</span> Remind yourself of what you needed to do</h2>
+<div id="work-in-bursts-with-a-timer---pomodoro-technique" class="section level2">
+<h2><span class="header-section-number">2.2</span> Work in bursts with a timer - Pomodoro technique</h2>
+<p>To keep you on track with what you’re momentarily doing, many people track themselves with a countdown timer.
+This is often done in adherence to the ‘Pomodoro’ technique, where you break your work down into intervals, typically 25 minutes in length, separated by short breaks.</p>
+<div id="laptop-2" class="section level3">
+<h3><span class="header-section-number">2.2.1</span> Laptop</h3>
+<p>Numerous tools exist for implementing this, for example <a href="https://xwavesoft.com/be-focused-pro-for-iphone-ipad-mac-os-x.html">Be Focused</a>:</p>
+<p><img src="figures/pomodoro.png" width="253" /></p>
+<p>You can also combine this with blocking distracting websites during work intervals, for example with <a href="https://chrome.google.com/webstore/detail/focusme-a-pomodoro-timer/koebbleaefghpjjmghelhjboilcmfpad?hl=gb">FocusMe</a>:</p>
+<p><img src="figures/focusme.png" width="320" /></p>
 </div>
-<div id="new-tab-with-e.g.whats-your-goal" class="section level2">
-<h2><span class="header-section-number">3.2</span> New tab with e.g. what’s your goal</h2>
+<div id="android-1" class="section level3">
+<h3><span class="header-section-number">2.2.2</span> Android</h3>
+<p>Apps that implement this functionality include <a href="https://play.google.com/store/apps/details?id=com.deGans.itsStudyTime&amp;hl=en&amp;gl=us">Its Study Time</a>:
+<img src="figures/its_study_time2.png" width="540" /></p>
 </div>
-<div id="periodic-reminders" class="section level2">
-<h2><span class="header-section-number">3.3</span> Periodic reminders</h2>
+<div id="ios-1" class="section level3">
+<h3><span class="header-section-number">2.2.3</span> iOS</h3>
+<p>On Apple’s devices, this is implemented by tools including <a href="https://itunes.apple.com/gb/app/sidekick-mattie/id1166327958?mt=8&amp;ign-mpt=uo%3D4">Mattie</a>:</p>
+<p><img src="figures/mattie.jpg" width="115" /></p>
+</div>
+</div>
+</div>
+<div id="advance-your-goals" class="section level1">
+<h1><span class="header-section-number">3</span> Advance your goals</h1>
+<div id="make-new-tabs-remind-you-of-your-goals" class="section level2">
+<h2><span class="header-section-number">3.1</span> Make new tabs remind you of your goals</h2>
+<p>On <strong>laptop</strong>, make new tabs remind you of what you need to do.</p>
+<p>For example, you can use the Chrome extension <a href="https://chrome.google.com/webstore/detail/focus/paipcheolflniajdfeglfpddafcklepg?hl=gb">Focus</a> to turn new tabs into a todo-list:</p>
+<p><img src="figures/focus_tab.png" width="1679" /></p>
+<p>This extension also lets you block distracting websites while you focus on a specific task.</p>
+<p>Search through the browser extension stores for a similar extension which might be useful to you:
+- <a href="https://safari-extensions.apple.com">Safari Extensions</a>
+- <a href="https://chrome.google.com/webstore/category/extensions?hl=en">Chrome Extensions</a>
+- <a href="https://addons.mozilla.org/en-GB/firefox/">Firefox Add-Ons</a></p>
 </div>
 <div id="motivational-quotes" class="section level2">
-<h2><span class="header-section-number">3.4</span> Motivational quotes</h2>
+<h2><span class="header-section-number">3.2</span> Motivational quotes</h2>
+<p>On <strong>laptop</strong>, use new tabs to remind of what’s important in life.</p>
+<p>For example, use the Chrome extension <a href="https://chrome.google.com/webstore/detail/daily-motivation-motivati/nonnkklkpbokmppgochfdamhihaijdin?hl=gb">Daily Motivation</a> to replace the content of new tabs with motivational quotes:</p>
+<p><img src="figures/daily_motivation.png" width="913" /></p>
+<p>Search through the browser extension stores for similar extensions for your browser:
+- <a href="https://safari-extensions.apple.com">Safari Extensions</a>
+- <a href="https://chrome.google.com/webstore/category/extensions?hl=en">Chrome Extensions</a>
+- <a href="https://addons.mozilla.org/en-GB/firefox/">Firefox Add-Ons</a></p>
 </div>
-<div id="redirect-yourself" class="section level2">
-<h2><span class="header-section-number">3.5</span> Redirect yourself</h2>
+<div id="replace-facebooks-newsfeed-with-a-todo-list" class="section level2">
+<h2><span class="header-section-number">3.3</span> Replace Facebook’s newsfeed with a todo-list</h2>
+<p>On <strong>laptop</strong>, replace Facebook’s newsfeed with reminders of what you need to do.</p>
+<p>For example, use the Chrome extension <a href="https://chrome.google.com/webstore/detail/todobook/ihbejplhkeifejcpijadinaicidddbde?hl=gb">Todobook</a> to replace Facebook’s newsfeed with a todo list.</p>
+<p><img src="figures/todobook.png" width="1540" /></p>
+<p>Search through the browser extension stores for similar extensions for your browser:
+- <a href="https://safari-extensions.apple.com">Safari Extensions</a>
+- <a href="https://chrome.google.com/webstore/category/extensions?hl=en">Chrome Extensions</a>
+- <a href="https://addons.mozilla.org/en-GB/firefox/">Firefox Add-Ons</a></p>
+</div>
+<div id="automatically-redirect-yourself-away-from-distraction" class="section level2">
+<h2><span class="header-section-number">3.4</span> Automatically redirect yourself away from distraction</h2>
+<p>On <strong>laptop</strong>, automatically redirect yourself away from distracting websites when you need to focus.</p>
+<p>For example, use the Chrome extension <a href="https://chrome.google.com/webstore/detail/timewarp/mmmhadpnjmokjbmgamifipkjddhlfkhi?hl=gb">Timewarp</a>:</p>
+<p><img src="figures/timewarp.png" width="1131" /></p>
+<p>Search through the browser extension stores for similar extensions for your browser:
+- <a href="https://safari-extensions.apple.com">Safari Extensions</a>
+- <a href="https://chrome.google.com/webstore/category/extensions?hl=en">Chrome Extensions</a>
+- <a href="https://addons.mozilla.org/en-GB/firefox/">Firefox Add-Ons</a></p>
+</div>
+<div id="periodic-reminders" class="section level2">
+<h2><span class="header-section-number">3.5</span> Periodic reminders</h2>
+<p>Remind yourself to mindful of what you’re doing.</p>
+<p>For example, use the Chrome extension <a href="https://chrome.google.com/webstore/detail/gen4/pjkdlacnjfgkdbpojjfalmehngmlegnd/related?hl=gb">Gen4</a> to get period reminders of what you’re supposed to be doing while you’re browsing the web:</p>
+<p><img src="figures/gen4.jpg" width="50%" /><img src="figures/gen4-2.jpg" width="50%" /></p>
 </div>
 </div>
 <div id="rewardpunish" class="section level1">
