--- a/strategies.html
+++ b/strategies.html
@@ -295,8 +295,8 @@ div.tocify {
 <p>Welcome to the accompanying website to the <strong>Re</strong>ducing <strong>D</strong>igital <strong>D</strong>istraction (ReDD) workshop.</p>
 <p>Here, you will find a bit of further detail about the tools and strategies listed on the cards handed out in the workshop.</p>
 <p>You can scroll through a large number of tools here: <a href="https://docs.google.com/spreadsheets/d/1BVBCBOZQY_K7qYmDiSIail07F6D1iDG1OkoFyazb5Y4/edit#gid=777024457">tinyurl.com/digital-selfcontrol</a>.</p>
-<div id="blockremove-distractions" class="section level1">
-<h1><span class="header-section-number">1</span> Block/Remove distractions</h1>
+<div id="block-or-remove-distractions" class="section level1">
+<h1><span class="header-section-number">1</span> Block or remove distractions</h1>
 <div id="block-access" class="section level2">
 <h2><span class="header-section-number">1.1</span> Block access</h2>
 <p>If particular websites or apps distract you, try blocking your own access to them for some time or after a certain amount of time has passed.</p>
@@ -360,8 +360,8 @@ When ‘Downtime’ is scheduled, only phone calls and apps that you choose to a
 </div>
 </div>
 </div>
-<div id="self-tracking" class="section level1">
-<h1><span class="header-section-number">2</span> Self-tracking</h1>
+<div id="track-yourself" class="section level1">
+<h1><span class="header-section-number">2</span> Track yourself</h1>
 <div id="see-how-your-spend-your-time" class="section level2">
 <h2><span class="header-section-number">2.1</span> See how your spend your time</h2>
 <p>Various tools are available to see how your spend time on your devices, and compare it to your goals.</p>
@@ -453,8 +453,8 @@ This is often done in adherence to the ‘Pomodoro’ technique, where you break
 <p><img src="figures/gen4.jpg" width="50%" /><img src="figures/gen4-2.jpg" width="50%" /></p>
 </div>
 </div>
-<div id="rewardpunish" class="section level1">
-<h1><span class="header-section-number">4</span> Reward/punish</h1>
+<div id="reward-or-punish-yourself" class="section level1">
+<h1><span class="header-section-number">4</span> Reward or punish yourself</h1>
 <div id="forest-flora" class="section level2">
 <h2><span class="header-section-number">4.1</span> Forest, Flora</h2>
 </div>
