--- a/strategies.html
+++ b/strategies.html
@@ -455,11 +455,21 @@ This is often done in adherence to the ‘Pomodoro’ technique, where you break
 </div>
 <div id="reward-or-punish-yourself" class="section level1">
 <h1><span class="header-section-number">4</span> Reward or punish yourself</h1>
-<div id="forest-flora" class="section level2">
-<h2><span class="header-section-number">4.1</span> Forest, Flora</h2>
+<div id="protect-a-virtual-creature-by-sticking-with-your-intentions" class="section level2">
+<h2><span class="header-section-number">4.1</span> Protect a virtual creature by sticking with your intentions</h2>
+<p>To get a little extra push of motivation to use your devices in the way you intended, you can introduce a little extra reward.</p>
+<p>One of the most popular apps is <a href="https://www.forestapp.cc/">Forest</a> which lets you grow virtual trees during focus sessions, that die if you do not stick with your intention.</p>
+<p><img src="figures/forest_iphone.png" width="33%" /><img src="figures/forest_android.png" width="33%" /><img src="figures/forest_chrome.png" width="33%" /></p>
+<p>Forest is available for <a href="https://itunes.apple.com/app/forest-stay-focused-stop-phubbing/id866450515">iOS</a>, <a href="https://play.google.com/store/apps/details?id=cc.forestapp">Android</a>, and as a <a href="https://chrome.google.com/webstore/detail/forest-stay-focused-be-pr/kjacjjdnoddnpbbcjilcajfhhbdhkpgk">Chrome extension</a>.</p>
+<p>Other tools include <a href="https://docs.google.com/spreadsheets/d/1BVBCBOZQY_K7qYmDiSIail07F6D1iDG1OkoFyazb5Y4/edit#gid=777024457">Feed the Goat (Chrome Extension)</a> and <a href="https://itunes.apple.com/us/app/flora-focus-study-pomodoro/id1225155794?mt=8&amp;ign-mpt=uo%3D4">Flora (iOS)</a>:</p>
+<p><img src="figures/flora.png" width="50%" /><img src="figures/feed_goat.png" width="50%" /></p>
 </div>
-<div id="worlds-most-dangerous-writing-app" class="section level2">
-<h2><span class="header-section-number">4.2</span> World’s most dangerous writing app</h2>
+<div id="writing-under-pressure" class="section level2">
+<h2><span class="header-section-number">4.2</span> Writing under pressure</h2>
+<p>The online tool <a href="https://www.themostdangerouswritingapp.com">The Most Dangerous Writing App</a> helps you get into the flow of writing by adding pressure:
+You set a target word count or duration of time, begin typing, and if you stop typing for more than a few seconds before you hit the goal, all you have typed is deleted!</p>
+<p><img src="figures/worlds_dangerous.png" width="692" /></p>
+<p>Perfect for simulating the feeling of being so close to a deadline that procrastination is no longer an option.</p>
 </div>
 </div>
 <div id="change-your-digital-environment" class="section level1">
