finish first pass through

--- a/strategies.html
+++ b/strategies.html
@@ -371,8 +371,8 @@ When ‘Downtime’ is scheduled, only phone calls and apps that you choose to a
 <h3><span class="header-section-number">2.1.1</span> Android</h3>
 <p>On <strong>Android</strong>, apps such as <a href="https://play.google.com/store/apps/details?id=com.agooday.screentime&amp;hl=en&amp;gl=us">Usage Time</a> provide the same functionality:</p>
 <p><img src="figures/app_usage.png" width="525" /></p>
-<p>Google has also begun to provide the same functionality via their <a href="https://play.google.com/store/apps/details?id=com.google.android.apps.wellbeing&amp;hl=en_GB">Digital Wellbeing</a> app which comes pre-installed on many newer devices:
-<img src="figures/digi_wellbeing.jpeg" width="910" /></p>
+<p>Google has also begun to provide the same functionality via their <a href="https://play.google.com/store/apps/details?id=com.google.android.apps.wellbeing&amp;hl=en_GB">Digital Wellbeing</a> app which comes pre-installed on many newer devices (Settings &gt; Digital Wellbeing):</p>
+<p><img src="figures/digi_wellbeing.jpeg" width="910" /></p>
 </div>
 <div id="ios" class="section level3">
 <h3><span class="header-section-number">2.1.2</span> iOS</h3>
@@ -469,25 +469,54 @@ This is often done in adherence to the ‘Pomodoro’ technique, where you break
 <p>The online tool <a href="https://www.themostdangerouswritingapp.com">The Most Dangerous Writing App</a> helps you get into the flow of writing by adding pressure:
 You set a target word count or duration of time, begin typing, and if you stop typing for more than a few seconds before you hit the goal, all you have typed is deleted!</p>
 <p><img src="figures/worlds_dangerous.png" width="692" /></p>
-<p>Perfect for simulating the feeling of being so close to a deadline that procrastination is no longer an option.</p>
+<p>Perfect for simulating the feeling of being so close to a deadline that procrastination is no longer an option!</p>
 </div>
 </div>
 <div id="change-your-digital-environment" class="section level1">
 <h1><span class="header-section-number">5</span> Change your digital environment</h1>
-<div id="go-grey-scale" class="section level2">
-<h2><span class="header-section-number">5.1</span> Go grey-scale</h2>
+<div id="go-grey-scale-smartphone" class="section level2">
+<h2><span class="header-section-number">5.1</span> Go grey-scale (smartphone)</h2>
+<p>A simple way to make your smartphone less distracting is to turn it greyscale when you do not need color.</p>
+<p><img src="figures/greyscale.png" width="375" /></p>
+<p>On iPhone, you can set a triple-tap on the Home button to toggle grey scale on and off:
+- Settings &gt; Accessibility &gt; Accessibility Shortcut &gt; Colour Filters</p>
+<p>Newer versions of the Android operating system may include toggle of gray scale in your phone’s quick settings.</p>
+</div>
+<div id="arrange-your-apps-smartphone" class="section level2">
+<h2><span class="header-section-number">5.2</span> Arrange your apps (smartphone)</h2>
+<p>Try arranging your apps so that your home screen is minimalistic and simple, and so that the apps you’d like to use less often require a bit more effort to reach.</p>
+<p>Limit your first page of apps to only apps you use for quick in-and-out tasks - move the rest of your apps, especially mindless choices, off the first page and into folders.</p>
+<p><img src="figures/off_page.png" width="50%" /><img src="figures/off_page2.png" width="50%" /></p>
 </div>
 <div id="do-not-disturb-during-set-hours" class="section level2">
-<h2><span class="header-section-number">5.2</span> Do not disturb during set hours</h2>
-</div>
-<div id="arrange-your-apps" class="section level2">
-<h2><span class="header-section-number">5.3</span> Arrange your apps</h2>
+<h2><span class="header-section-number">5.3</span> Do not disturb during set hours</h2>
+<p>Schedule do not disturb, so that during certain hours (e.g. 9pm to 8am) only calls from your favorite contacts go through directly.</p>
+<p><img src="figures/do_not_disturb.png" width="375" /></p>
+<p><em>Wind Down</em> on newer versions of Android also provide this feature, along with the ability to automatically turn your phone greyscale when getting ready for bed.</p>
 </div>
 <div id="manage-notifications" class="section level2">
 <h2><span class="header-section-number">5.4</span> Manage notifications</h2>
+<p>Be ruthless about which apps you give the ability to send you notifications.</p>
+<p>On iPhone, go to Settings &gt; Notifications and carefully consider which apps should be allowed to disturb you.</p>
+<p>On a Mac, newer operating systems also include a Do Not Disturb mode, for when you need to focus without having popups about incoming email etc.:</p>
+<p><img src="figures/do_not_disturb_mac.png" width="349" /></p>
 </div>
-<div id="use-full-screen" class="section level2">
-<h2><span class="header-section-number">5.5</span> Use full-screen</h2>
+<div id="use-full-screen-laptop" class="section level2">
+<h2><span class="header-section-number">5.5</span> Use full-screen (laptop)</h2>
+<p>On a laptop, try limiting the amount of information available to you to what you actually need for your task.</p>
+<p>On a Mac, one good way of doing this is to use full screen mode to e.g. show have the two tools you need side by side:</p>
+<div class="figure"><span id="fig:unnamed-chunk-32"></span>
+<img src="figures/full_screen1.png" alt="Rather than this..." width="1680" />
+<p class="caption">
+Figure 5.1: Rather than this…
+</p>
+</div>
+<div class="figure"><span id="fig:unnamed-chunk-33"></span>
+<img src="figures/full_screen_2.png" alt="... try this" width="1680" />
+<p class="caption">
+Figure 5.2: … try this
+</p>
+</div>
 </div>
 </div>
 
