--- a/strategies.html
+++ b/strategies.html
@@ -380,8 +380,8 @@ When ‘Downtime’ is scheduled, only phone calls and apps that you choose to a
 <img src="figures/screentime.png" width="347" /></p>
 </div>
 </div>
-<div id="work-in-bursts-with-a-timer---pomodoro-technique" class="section level2">
-<h2><span class="header-section-number">2.2</span> Work in bursts with a timer - Pomodoro technique</h2>
+<div id="work-in-bursts-with-a-timer" class="section level2">
+<h2><span class="header-section-number">2.2</span> Work in bursts with a timer</h2>
 <p>To keep you on track with what you’re momentarily doing, many people track themselves with a countdown timer.
 This is often done in adherence to the ‘Pomodoro’ technique, where you break your work down into intervals, typically 25 minutes in length, separated by short breaks.</p>
 <div id="laptop-2" class="section level3">
@@ -448,7 +448,7 @@ This is often done in adherence to the ‘Pomodoro’ technique, where you break
 </div>
 <div id="periodic-reminders" class="section level2">
 <h2><span class="header-section-number">3.5</span> Periodic reminders</h2>
-<p>Remind yourself to mindful of what you’re doing.</p>
+<p>Be mindful of what you’re supposed to be doing.</p>
 <p>For example, use the Chrome extension <a href="https://chrome.google.com/webstore/detail/gen4/pjkdlacnjfgkdbpojjfalmehngmlegnd/related?hl=gb">Gen4</a> to get period reminders of what you’re supposed to be doing while you’re browsing the web:</p>
 <p><img src="figures/gen4.jpg" width="50%" /><img src="figures/gen4-2.jpg" width="50%" /></p>
 </div>
